python/testData/inspections/addFunctionToModuleInFromImport/addFunctionToModuleInFromImport.py
from mod import <error descr="Cannot find reference 'foo' in 'mod.py'"><caret>foo</error>


foo()
